# web-scraping-for-competitors

./: .env.example  .gitignore  AGENTS.md  README.md  comparador.py  extractor.py  logger.py  main.py  pyproject.toml  requirements.txt  resultados_competidores.csv  resultados_competidores.xlsx  urls.txt  worker.js  wrangler.toml
.kilo/plans/: 1777074967126-shiny-canyon.md  1777135841610-jolly-harbor.md  1777141108539-crisp-tiger.md
.kilo/skills/add-scraper-strategy/: SKILL.md
extractors/: __init__.py  beautifulsoup_extractor.py  strategies.py
scrapers/: __init__.py  base.py  cloudflare_scraper.py  local_playwright_scraper.py
